rancher-k8s/manisfests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: gitops-app
spec:
  rules:
  - host: haproxy.127.0.0.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haproxy
            port:
              number: 16080
